ingress_webservers_lab0.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx.lab0.sikademo.com
        - apache.lab0.sikademo.com
        - caddy.lab0.sikademo.com
      secretName: webservers-tls
  rules:
    - host: nginx.lab0.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - host: apache.lab0.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
    - host: caddy.lab0.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
